--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@ body {
     height: 100vh;
     background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
     background: #8abaa4;
-    // background-image: url("../../public/bg.jpg");
+    // background-image: url("../public/bg.jpg");
     position: fixed;
     left: 0;
     top: 0;
